[tool.poetry]
name = "nfl-big-data-bowl-2020"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
scikit-learn = "^0.22.2"
tensorflow = "^2.2.0"
tfa-nightly = "^0.10.0-alpha.20200505184857"
statsmodels = "^0.11.1"
jupyter = "^1.0.0"
elegy = {path = "../elegy"}
dm-haiku = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
